--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 streaming-history-data/*.json
 streaming-history-data/*.pdf
 
+results/*
+adjustments.json
+
 # example data
 # !streaming-history-data/Streaming_History_Audio_2015-2016_0.json
 !streaming-history-data/Streaming_History_Audio_2016_1.json
